fix header overlapping

--- a/src/css/glossary.css
+++ b/src/css/glossary.css
@@ -30,8 +30,4 @@ dd{
 
 }
 
-.glossary{
-    padding-top:2em;
-}
-
 
